--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
 
 
    </main>
-   <footer></footer>
+   <footer>
+    <h1>An Open Commitment by Awlad Hossain</h1>
+   </footer>
     
 </body>
 </html>
