--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <section class="full-banner">
     <section class="header">
 
-        <img src="B10A1-Challenge-Begins/assets/Group.png" alt="">
+        <img src="assets/Group.png" alt="">
         <h1>"In the near future, I hope to become a Developer."</h1>
         <h4>Developers solve complex problems by writing efficient code and collaborating with their teams. They continuously learn new technologies to keep up with the ever-evolving tech landscape.</h4>
         <h4 ><button class="btn-primary">Contact with me</button></h4>
@@ -34,24 +34,24 @@
 <div class="banner">
 <div class="banner-content">
   <h4> I will Do Coding and Change The World</h4>
-<p class="banner-description">I'll code to create impactful solutions, driving positive change globally. My skills will innovate, solve problems, and make a real difference.</p>
+<p class="banner-description">I'll code to create impactful solutions, driving positive change globally. My skills will innovate, solve problems, and make a real difference.</p><button>Learn More</button>
     </div>
-    <img class="banner-profile pic" src="B10A1-Challenge-Begins/assets/Layer_1.png" alt="">
+   <img src="assets/Layer_1.png" alt="">
 </div>
 
 <div class="banner-2">
-    <img src="B10A1-Challenge-Begins/assets/Group 3.png" alt="">
+   <img src="assets/Group 3.png" alt="">
     <div class="banner-content-2">
         <h4>I will help People by creating Modern Web System</h4>
-        <p>I'll help people by developing modern web systems that improve lives. My creations will enhance accessibility, efficiency, and user experience.</p>
+        <p>I'll help people by developing modern web systems that improve lives. My creations will enhance accessibility, efficiency, and user experience.</p><button>Learn More</button>
     </div>
     
 </div>
 <div class="banner-3">
     <div class="banner-content-3"><h4>I will Do Coding and Change The World</h4>
     <p class="banner-description-3">"Code with passion, change the world.
-        Every line matters, every solution counts."</p></div>
-        <img class="banner-profile-3" src="B10A1-Challenge-Begins/assets/Group 4.png" alt="">
+        Every line matters, every solution counts."</p><button>Learn More</button></div>
+      <img src="assets/Group 4.png" alt="">
 </div>
 <section class="title">
     <h3 class="Inspiration" >My Inspiration</h3>
@@ -91,8 +91,11 @@
 
 </section>
 
-<section class="handshake">
-<div class="last"></div>
+<section class="last-banner">
+    <section class="header-2">
+        <h3>I need suport</h3>
+        <h5>Could you please provide more details about what kind of support you need? Are you looking for help with code, troubleshooting an issue, or something else?</h5>
+    </section>
 </section>
 
 
@@ -100,7 +103,11 @@
 
    </main>
    <footer>
-    <h1>An Open Commitment by Awlad Hossain</h1>
+  <div class="foot"><h3>An Open Commitment by Awlad Hossain</h3>
+  <img src="assets/facebook.png" alt="">
+  <img src="assets/github.png" alt="">
+  <img src="assets/linkedin-icon 1.png" alt="">
+  </div>
    </footer>
     
 </body>
