--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
     <section class="header-2">
         <h3>I need suport</h3>
         <h5>Could you please provide more details about what kind of support you need? Are you looking for help with code, troubleshooting an issue, or something else?</h5>
+       
+        <button>submit</button>
     </section>
 </section>
 
